--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
 		<section>
 			<main>
 				<div>
-					<h1>Whack-It</h1>
+					<h1>Whack-A-Mole</h1>
 				</div>
+				<button class='spec' id='timer'>Timer</button>
 				<button class='difficulty' id='go'>Beginner</button>
 				<button class='difficulty' id='md'>Medium</button>
 				<button class='difficulty' id='hard'>Hard</button>
